<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">ESM Ngöndro Counter</string>
    <string name="action_undo">Undo</string>
    <string name="action_edit_counter">Edit Counter</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="last_practice">Your last practice was:</string>
    <string name="prostrations_pace_to_date">By doing %1$d prostrations a day,\n you will finish them on %2$tB %2$te %2$tY§.</string>
    <string name="pace_label">Repetitions:</string>
    <string name="finish_date_label">Finish by:</string>
    <string name="pick_pace">Repetitions per session</string>
    <string name="never">Never!!!!</string>
    <string name="finished">Finished!</string>
    <string name="action_edit_pace">Set repetitions per day</string>
    <string name="action_add_repetitions">Add repetitions</string>
    <string name="prostrations">prostrations</string>
    <string name="prostrations_short">Prostrations</string>
    <string name="diamond_mind">Diamond Mind mantras</string>
    <string name="diamond_mind_short">Diamond Mind</string>
    <string name="mandala_offering">Mandalas offered</string>
    <string name="mandala_offering_short">Mandala</string>
    <string name="guru_yoga">Guru Yoga mantras</string>
    <string name="guru_yoga_short">Guru Yoga</string>
    <string name="dm_lock">After doing at least 70,000 prostrations, begin Diamond Mind</string>
    <string name="mandala_lock">After finishing Diamond Mind, begin Mandala Offering</string>
    <string name="guru_yoga_lock">After finishing Mandala Offering, begin Guru Yoga</string>
    <string name="finish_date_dialog_title">Finish before:</string>
    <string name="title_activity_about">About ESM</string>
    <string name="action_about">About the ESM Project…</string>
    <string name="good_luck">Good luck in your practice!</string>
    <string name="splash_text">If you like our app,\nsupport our project</string>
    <string name="splash_more">About ESM…</string>
    <string name="splash_go">Practice!</string>
    <string name="website">http://www.eastsidemandala.pl/eng_index.html</string>
    <string name="website_button_text">Website</string>
    <string name="last_practice_date">last on %1$tB %1$te, %1$tY at %1$tl:%1$tM %1$tp</string>
    <string name="until">finish %1$tB %1$te, %1$tY</string>
    <string name="short_refuge">Short refuge formulas</string>
    <string name="short_refuge_short">Short refuge</string>
    <string name="amitabha">Om Ami Dewa Hrih mantras</string>
    <string name="amitabha_short">Phowa Preparation</string>
    <string name="lovingeyes">Om Mani Peme Hung mantras</string>
    <string name="lovingeyes_short">Loving Eyes</string>
</resources>
